Remove old workflow. Update manual workflow to fix missing tag name in release step

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -81,6 +81,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.event.inputs.tag_name }}
           name: ${{ github.event.inputs.tag_name }}
           body: ${{ github.event.inputs.release_description }}
           files: Calculator_Ghidra_*/*.zip
