--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ buildExtension.exclude '.gradle/**'
 buildExtension.exclude 'build/**'
 buildExtension.exclude '.git/**'
 buildExtension.exclude 'gradle.properties'
+buildExtension.exclude '.github/**'
 
